--- a/L3/.vscode/settings.json
+++ b/L3/.vscode/settings.json
@@ -1,8 +1,5 @@
 {
-  "files.associations": {
-    "time.h": "c"
-  },
-  "C_Cpp_Runner.cCompilerPath": "gcc",
+  "C_Cpp_Runner.cCompilerPath": "C:/MinGW/bin/gcc.exe",
   "C_Cpp_Runner.cppCompilerPath": "C:/MinGW/bin/g++.exe",
   "C_Cpp_Runner.debuggerPath": "C:/MinGW/bin/gdb.exe",
   "C_Cpp_Runner.cStandard": "",
