--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,6 @@
     "**/.vscode/**"
   ],
   "C_Cpp_Runner.cCompilerPath": "C:/MinGW/bin/gcc.exe",
-  "C_Cpp_Runner.debuggerPath": "gdb"
+  "C_Cpp_Runner.debuggerPath": "gdb",
+  "C_Cpp_Runner.cppCompilerPath": "C:/MinGW/bin/g++.exe"
 }
