--- a/Projeto/Henrique/Makefile
+++ b/Projeto/Henrique/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 
-TARGET = Projeto_Final
+TARGET = palavras
 
 all:
 	$(CC) -Wall -o $(TARGET) main.c ini_tabuleiro.c editabuleiro.c printabuleiro.c get_comando.c
