--- a/Projeto/Henrique/Projeto_final.cbp
+++ b/Projeto/Henrique/Projeto_final.cbp
@@ -11,6 +11,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option parameters="-i 7x7-vazio.txt" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
@@ -35,7 +36,13 @@
 		<Unit filename="editabuleiro.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="free_mem.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="get_comando.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="get_tabuleiro.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="ini_tabuleiro.c">
