--- a/Projeto/Henrique/Projeto_final.cbp
+++ b/Projeto/Henrique/Projeto_final.cbp
@@ -11,7 +11,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="-i 7x7-vazio.txt" />
+				<Option parameters="-d /home/kubuntu/Desktop/sf_Quio/Exemplos2/pt-small.txt" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
@@ -33,6 +33,9 @@
 			<Add option="-Wall" />
 		</Compiler>
 		<Unit filename="Projeto_Final.h" />
+		<Unit filename="alg_cpu.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="editabuleiro.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -49,6 +52,9 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="main.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="org_dicionario.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="printabuleiro.c">
