--- a/Projeto/Henrique/Makefile
+++ b/Projeto/Henrique/Makefile
@@ -3,7 +3,7 @@ CC = gcc
 TARGET = palavras
 
 all:
-	$(CC) -Wall -o $(TARGET) main.c ini_tabuleiro.c editabuleiro.c printabuleiro.c get_comando.c
+	$(CC) -Wall -o $(TARGET) main.c ini_tabuleiro.c editabuleiro.c printabuleiro.c get_comando.c alg_cpu.c contar_pontos.c free_mem.c get_tabuleiro.c get_dicionario.c org_dicionario.c print_file.c verificar_palavra.c
 
 clean:
 	rm $(TARGET)
